# scialp

./: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
data/: avalanches.json  day_photos.json  days.json  groups.json  memberships.json  routes.json  users.json
scialpi/: __init__.py  avalanche_manager.py  cli.py  config.py  day_media.py  media_store.py  post_manager.py  trip_manager.py  user_manager.py  utils.py
scialpi_web/: __init__.py  app.py  routes.py
scialpi_web/static/js/: activities_view.js  avalanches.js  trips_map.js
scialpi_web/templates/: activities.html  activity_detail.html  avalanches.html  base.html  community.html  index.html  login.html  people.html  profile.html  register.html  reset_request.html  reset_set.html  trip_detail.html  trip_form.html  trips_map.html  user_profile.html
